--- a/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_3_unpaidFineList.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_3_unpaidFineList.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G3UnpaidFineList">
    <children>
-      <TableView fx:id="unpaidfinelist" layoutX="14.0" layoutY="75.0" prefHeight="139.0" prefWidth="473.0">
+      <TableView fx:id="unpaidfinelist" layoutX="14.0" layoutY="108.0" prefHeight="139.0" prefWidth="473.0">
         <columns>
           <TableColumn fx:id="vehicleRegCOL" prefWidth="120.79999351501465" text="Vehicle Reg" />
           <TableColumn fx:id="licenceNOcol" prefWidth="147.20001220703125" text="Licence No" />
@@ -25,8 +25,8 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <TextField fx:id="secrchTF" layoutX="14.0" layoutY="44.0" />
-      <Button layoutX="173.0" layoutY="44.0" mnemonicParsing="false" onAction="#searchOA" text="Search" />
+      <TextField fx:id="secrchTF" layoutX="14.0" layoutY="77.0" />
+      <Button layoutX="173.0" layoutY="77.0" mnemonicParsing="false" onAction="#searchOA" text="Search" />
       <Text layoutX="14.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reg No:" />
       <Text fx:id="regNotextlabel" layoutX="61.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="227.21601104736328" />
       <Text fx:id="tollAmounttextlabel" layoutX="81.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="227.21601104736328" />
@@ -36,5 +36,6 @@
       <RadioButton fx:id="unpaidRB" layoutX="119.0" layoutY="314.0" mnemonicParsing="false" text="Unpaid" />
       <Button layoutX="21.0" layoutY="347.0" mnemonicParsing="false" onAction="#collectAmountOA" text="Collect Amount" />
       <Button layoutX="130.0" layoutY="347.0" mnemonicParsing="false" onAction="#fileCaseOA" text="File Case " />
+      <Button layoutX="15.0" layoutY="44.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
    </children>
 </AnchorPane>
