--- a/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_6_InvastigateAccident.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_6_InvastigateAccident.fxml
@@ -10,20 +10,21 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G6InvastigateAccidentController">
    <children>
-      <TextField fx:id="regNoTF" layoutX="127.0" layoutY="144.0" />
-      <TextField fx:id="DrivingLicenceTF" layoutX="127.0" layoutY="179.0" />
-      <Label layoutX="17.0" layoutY="112.0" text="Accident Location:" />
-      <Label layoutX="17.0" layoutY="148.0" text="Reg No:" />
-      <Label layoutX="17.0" layoutY="183.0" text="Driving Licence NO:" />
-      <Label fx:id="massageLabel" layoutX="284.0" layoutY="182.0" prefHeight="18.0" prefWidth="206.0" />
+      <TextField fx:id="regNoTF" layoutX="127.0" layoutY="157.0" />
+      <TextField fx:id="DrivingLicenceTF" layoutX="127.0" layoutY="192.0" />
+      <Label layoutX="17.0" layoutY="125.0" text="Accident Location:" />
+      <Label layoutX="17.0" layoutY="161.0" text="Reg No:" />
+      <Label layoutX="17.0" layoutY="196.0" text="Driving Licence NO:" />
+      <Label fx:id="massageLabel" layoutX="284.0" layoutY="195.0" prefHeight="18.0" prefWidth="206.0" />
       <Label layoutX="154.0" layoutY="32.0" text="Invastigate Accident">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <Button layoutX="215.0" layoutY="330.0" mnemonicParsing="false" onAction="#saveOA" prefHeight="26.0" prefWidth="69.0" text="Save" />
-      <ComboBox fx:id="AccidentLocationCombobox" layoutX="126.0" layoutY="109.0" prefWidth="150.0" />
-      <TextArea fx:id="AccidentTextArea" layoutX="15.0" layoutY="235.0" prefHeight="66.0" prefWidth="270.0" />
-      <Label layoutX="18.0" layoutY="214.0" text="Accident Reason:" underline="true" />
+      <Button layoutX="403.0" layoutY="324.0" mnemonicParsing="false" onAction="#saveOA" prefHeight="26.0" prefWidth="69.0" text="Save" />
+      <ComboBox fx:id="AccidentLocationCombobox" layoutX="126.0" layoutY="122.0" prefWidth="150.0" />
+      <TextArea fx:id="AccidentTextArea" layoutX="15.0" layoutY="248.0" prefHeight="66.0" prefWidth="470.0" />
+      <Label layoutX="18.0" layoutY="227.0" text="Accident Reason:" underline="true" />
+      <Button layoutX="13.0" layoutY="74.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
    </children>
 </AnchorPane>
