--- a/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_7_lost.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_7_lost.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Tawhid.PoliceAuthurity.G81Lost"
+            fx:controller="cse_213.final_project.Tawhid.Controllers.G81Lost"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
