--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Interdepartmental_CommunicationL4 .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Interdepartmental_CommunicationL4 .fxml
@@ -19,7 +19,7 @@
             <TableColumn fx:id="Statustablecolumn" prefWidth="124.00006103515625" text="Status" />
         </columns>
       </TableView>
-      <Button layoutX="323.0" layoutY="211.0" mnemonicParsing="false" onAction="#loadonactionbutton" text="Load " />
+      <Button layoutX="300.0" layoutY="211.0" mnemonicParsing="false" onAction="#loadonactionbutton" prefHeight="26.0" prefWidth="102.0" text="Load " />
       <TextArea fx:id="replymassagetextarea" layoutX="14.0" layoutY="294.0" prefHeight="75.0" prefWidth="212.0" promptText="Reply Massage" />
       <TextField fx:id="receivertextfield" layoutX="76.0" layoutY="384.0" />
       <Label layoutX="14.0" layoutY="388.0" text="Receiver" />
