--- a/src/main/resources/cse_213/final_project/Fima/ProfileInformation .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/ProfileInformation .fxml
@@ -24,7 +24,7 @@
       <Label layoutX="291.0" layoutY="125.0" text="Age" />
       <TextField fx:id="AGETEXTFIELD" layoutX="386.0" layoutY="116.0" prefHeight="26.0" prefWidth="175.0" />
       <Label layoutX="292.0" layoutY="77.0" text="Date of Joining" />
-      <DatePicker fx:id="dateofbirthdatepicker" layoutX="97.0" layoutY="160.0" />
+      <DatePicker fx:id="dateofbirthdatepicker" layoutX="97.0" layoutY="160.0" prefHeight="26.0" prefWidth="150.0" />
       <DatePicker fx:id="DateofJoiningdatepicker" layoutX="386.0" layoutY="73.0" />
       <Label layoutX="293.0" layoutY="164.0" text="Gender" />
       <Label layoutX="20.0" layoutY="112.0" text="ID" />
