--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/TollBoothOperator_Dashboard_V1.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/TollBoothOperator_Dashboard_V1.fxml
@@ -7,52 +7,46 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="DashboardBorderPane_1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.TollBoothOperatorDashboardFima">
    <left>
       <VBox prefHeight="490.0" prefWidth="217.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" onAction="#collecttollpaymentsonactionbutton" text=" Collect Toll Payments">
                <VBox.margin>
                   <Insets bottom="15.0" left="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" onAction="#vehicleinformationOnActionButton" text=" Vehicle Information">
                <VBox.margin>
                   <Insets bottom="15.0" left="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" onAction="#informationandsupportonactionbutton" text=" Information and Support">
                <VBox.margin>
                   <Insets bottom="15.0" left="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" onAction="#vipemergencyvehiclesonactionbutton" text=" VIP &amp; Emergency Vehicles">
                <VBox.margin>
                   <Insets bottom="15.0" left="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" onAction="#technicalissuesonactionbutton" text="Technical Issues">
                <VBox.margin>
                   <Insets bottom="15.0" left="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" onAction="#shiftattendanceonactionbutton" text=" Shift Attendance">
                <VBox.margin>
                   <Insets bottom="15.0" left="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" onAction="#profileinformationonactionbutton" text=" Profile Information">
                <VBox.margin>
                   <Insets bottom="15.0" left="20.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button mnemonicParsing="false" text="Button">
-               <VBox.margin>
-                  <Insets bottom="15.0" left="20.0" top="20.0" />
-               </VBox.margin>
-            </Button>
-            <Button mnemonicParsing="false" text="Button">
+            <Button mnemonicParsing="false" onAction="#logoutonactionbutton" text="Log Out">
                <VBox.margin>
                   <Insets bottom="15.0" left="20.0" top="20.0" />
                </VBox.margin>
