--- a/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/DownloadTollReciept.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/DownloadTollReciept.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.DownloadTollReciept">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.DownloadTollReciept2">
    <children>
       <TextField fx:id="Transactionfxidd" layoutX="29.0" layoutY="59.0" text="Transaction ID:" />
       <Label fx:id="DownloadTollRecieptFxid" layoutX="63.0" layoutY="26.0" prefHeight="18.0" prefWidth="122.0" text="DownloadTollReciept" />
