--- a/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/Recharge-Etage BlanceU2.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/Recharge-Etage BlanceU2.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane fx:id="Recharge" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.RechargeEtageBlance">
+<AnchorPane fx:id="Recharge" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.RechargeEtageBlance2">
    <children>
       <TextField fx:id="rechargefxid" layoutX="34.0" layoutY="62.0" promptText="rechargeId" />
       <Label fx:id="rechargeEtagblancefxid" layoutX="41.0" layoutY="9.0" prefHeight="18.0" prefWidth="132.0" text="Recharge-Etag-Blanced" />
