--- a/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/Register_vehicles.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/Register_vehicles.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.RegisterVehicles">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.RegisterVehicles2">
    <children>
       <Label layoutX="32.0" layoutY="36.0" prefHeight="18.0" prefWidth="97.0" text="RegisterVehicles" />
       <TextField fx:id="laicensefxid" layoutX="26.0" layoutY="67.0" promptText="LaicensePlate" />
