--- a/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/payTollBooth.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/payTollBooth.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.PayTollBooth">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.PayTollBooth2">
    <children>
       <TextField fx:id="tagidfxid" layoutX="22.0" layoutY="64.0" promptText="tagId" />
       <ComboBox fx:id="vehiclesTypecombox" layoutX="22.0" layoutY="109.0" prefWidth="150.0" promptText="vehiclesType" />
