--- a/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/updateVehiclesInfo.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/updateVehiclesInfo.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.UpdateVehiclesInfo">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.UpdateVehiclesInfo2">
    <children>
       <Label fx:id="UpdateVehicleInfofxid" layoutX="46.0" layoutY="32.0" prefHeight="18.0" prefWidth="151.0" text="UpdateVehiclesInformation" />
       <TextField fx:id="vehiclesIdfxid" layoutX="47.0" layoutY="66.0" promptText="VehiclesId" />
