--- a/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_2_fineCar.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/PoliceAuthurity/G_2_fineCar.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -16,11 +17,13 @@
       </Label>
       <TextField fx:id="fineAmountTF" layoutX="119.0" layoutY="160.0" />
       <Label layoutX="21.0" layoutY="164.0" text="Fine Amount:" />
-      <Button layoutX="225.0" layoutY="253.0" mnemonicParsing="false" onAction="#saveOA" text="Save" />
+      <Button layoutX="225.0" layoutY="310.0" mnemonicParsing="false" onAction="#saveOA" text="Save" />
       <DatePicker fx:id="DuedateDP" layoutX="118.0" layoutY="191.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="21.0" layoutY="195.0" text="Due date:" />
       <Button layoutX="21.0" layoutY="32.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
       <TextField fx:id="regNoTF" layoutX="118.0" layoutY="127.0" />
       <Label layoutX="21.0" layoutY="131.0" text="Vehicle reg no:" />
+      <TextArea fx:id="finereasonTextArea" layoutX="118.0" layoutY="229.0" prefHeight="74.0" prefWidth="341.0" />
+      <Label layoutX="21.0" layoutY="229.0" text="Fine reason:" />
    </children>
 </AnchorPane>
