--- a/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/SystemAlert.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/SystemAlert.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.SystemAlert">
    <children>
       <TableView fx:id="tableView" layoutX="38.0" layoutY="85.0" prefHeight="200.0" prefWidth="315.0">
@@ -21,5 +20,6 @@
       <Button layoutX="161.0" layoutY="304.0" mnemonicParsing="false" onAction="#refreshAlertOnaction" text="refreshAlert" />
       <Button fx:id="LoadAlertOnAction" layoutX="274.0" layoutY="304.0" mnemonicParsing="false" text="LoadAlert" />
       <Label fx:id="satusLabelfxid" layoutX="154.0" layoutY="358.0" prefHeight="18.0" prefWidth="106.0" text="statuslabel" />
+      <Button layoutX="487.0" layoutY="364.0" mnemonicParsing="false" onAction="#backOnaction" text="back" />
    </children>
 </AnchorPane>
