--- a/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/payTollBooth.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/payTollBooth.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.PayTollBooth2">
    <children>
       <TextField fx:id="tagidfxid" layoutX="22.0" layoutY="64.0" promptText="tagId" />
@@ -16,5 +15,6 @@
       <Label fx:id="PaymentStatusfxid" layoutX="5.0" layoutY="248.0" prefHeight="18.0" prefWidth="110.0" text="Paymentstatus" />
       <Button layoutX="8.0" layoutY="145.0" mnemonicParsing="false" onAction="#CalculateOnaction" prefHeight="26.0" prefWidth="150.0" text="calculateTollBotton" />
       <Button layoutX="8.0" layoutY="180.0" mnemonicParsing="false" onAction="#HandlePaymentOnaction" prefHeight="26.0" prefWidth="142.0" text="HandlePaymentButton" />
+      <Button layoutX="14.0" layoutY="299.0" mnemonicParsing="false" onAction="#backOnaction" text="back" />
    </children>
 </AnchorPane>
