--- a/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/AnnouncementController.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/AnnouncementController.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.AnnouncementController">
    <children>
       <Label fx:id="AnnounceementControllerfxid" layoutX="17.0" layoutY="14.0" prefHeight="18.0" prefWidth="144.0" text="AnnouncementController" />
@@ -24,5 +23,6 @@
         </columns>
       </TableView>
       <Button layoutX="37.0" layoutY="242.0" mnemonicParsing="false" onAction="#handleSendOnaction" text="handleSend" />
+      <Button layoutX="484.0" layoutY="351.0" mnemonicParsing="false" onAction="#backOnaction" text="back" />
    </children>
 </AnchorPane>
