--- a/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/ManageTollCollector.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/ManageTollCollector.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.ManageTollCollector">
    <children>
       <Label fx:id="manageTollCollectorfxid" layoutX="41.0" layoutY="14.0" prefHeight="18.0" prefWidth="114.0" text="ManageTollCollector" />
@@ -25,5 +24,6 @@
       <Button layoutX="33.0" layoutY="175.0" mnemonicParsing="false" onAction="#addcollectorOnaction" text="AddCollector" />
       <Button layoutX="33.0" layoutY="228.0" mnemonicParsing="false" onAction="#removeCollectorOnaction" text="removeCollector" />
       <TextField fx:id="labelStatusfixid" layoutX="283.0" layoutY="279.0" text="labelStatus" />
+      <Button layoutX="239.0" layoutY="361.0" mnemonicParsing="false" onAction="#backOnaction" text="back" />
    </children>
 </AnchorPane>
