--- a/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/CheckEtagblance.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/vehiclesOwner/CheckEtagblance.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.CheckEtagblance2">
    <children>
       <Label fx:id="checkEtagblancefxid" layoutX="28.0" layoutY="31.0" prefHeight="18.0" prefWidth="107.0" text="checkEtagBlance" />
@@ -15,5 +14,6 @@
       <TextField fx:id="Blancefxid" layoutX="14.0" layoutY="150.0" text="Blance:" />
       <TextArea fx:id="textareafxid" layoutX="270.0" layoutY="11.0" prefHeight="200.0" prefWidth="200.0" />
       <Button layoutX="14.0" layoutY="232.0" mnemonicParsing="false" onAction="#checkBlancebuttonOnaction" prefHeight="26.0" prefWidth="100.0" text="checkBlance" />
+      <Button layoutX="210.0" layoutY="338.0" mnemonicParsing="false" onAction="#backOnaction" text="back" />
    </children>
 </AnchorPane>
