--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/LiaisonOfficer_Dashboard_V2.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/LiaisonOfficer_Dashboard_V2.fxml
@@ -1,26 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.LiaisonOfficer.Dashboard">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="-9.0" text="LiaisonOfficer_Dashboard">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
    </center>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="600.0" prefWidth="232.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" onAction="#TollBoothStaffandManagementonactionbutton" text="Toll Booth Staff and Management" />
-            <Button mnemonicParsing="false" text="Shift Reports" />
-            <Button layoutX="10.0" layoutY="36.0" mnemonicParsing="false" text="System Failure Report" />
-            <Button layoutX="10.0" layoutY="61.0" mnemonicParsing="false" text="Interdepartmental Communication" />
-            <Button layoutX="10.0" layoutY="87.0" mnemonicParsing="false" text="Meeting Scheduler" />
-            <Button layoutX="10.0" layoutY="112.0" mnemonicParsing="false" text="Incident Reports from Plaza" />
-            <Button layoutX="10.0" layoutY="138.0" mnemonicParsing="false" text="External Inquiries" />
-            <Button layoutX="10.0" layoutY="164.0" mnemonicParsing="false" text="Crisis Response" />
+            <Button mnemonicParsing="false" onAction="#TollBoothStaffandManagementonactionbutton" text="Toll Booth Staff and Management">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#ShiftReportsonactionbutton" prefHeight="26.0" prefWidth="199.0" text="Shift Reports">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button layoutX="10.0" layoutY="36.0" mnemonicParsing="false" onAction="#SystemFailureReportonactionbutton" prefHeight="26.0" prefWidth="200.0" text="System Failure Report">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button layoutX="10.0" layoutY="61.0" mnemonicParsing="false" onAction="#InterdepartmentalCommunicationonactionbutton" text="Interdepartmental Communication">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button layoutX="10.0" layoutY="87.0" mnemonicParsing="false" onAction="#MeetingScheduleronactionbutton" prefHeight="26.0" prefWidth="198.0" text="Meeting Scheduler">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button layoutX="10.0" layoutY="112.0" mnemonicParsing="false" onAction="#IncidentReportsfromPlazaonactionbutton" prefHeight="26.0" prefWidth="196.0" text="Incident Reports from Plaza">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button layoutX="10.0" layoutY="138.0" mnemonicParsing="false" onAction="#ExternalInquiriesonactionbutton" prefHeight="26.0" prefWidth="198.0" text="External Inquiries">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button layoutX="10.0" layoutY="164.0" mnemonicParsing="false" onAction="#CrisisResponseonactionbutton" prefHeight="26.0" prefWidth="199.0" text="Crisis Response">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button layoutX="10.0" layoutY="189.0" mnemonicParsing="false" onAction="#LogOutonactionbutton" prefHeight="26.0" prefWidth="196.0" text="Log Out">
+               <VBox.margin>
+                  <Insets bottom="15.0" left="20.0" top="20.0" />
+               </VBox.margin>
+            </Button>
          </children>
       </VBox>
    </left>
