--- a/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/Dashboard_tollplazaAdminastrator.fxml
+++ b/src/main/resources/cse_213/final_project/Shahriar/tollplazaAdminstrator/Dashboard_tollplazaAdminastrator.fxml
@@ -6,15 +6,16 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Shahriar.contollers.DashboardShahriar">
    <children>
-      <Label fx:id="Tollplaza" layoutX="45.0" layoutY="33.0" prefHeight="18.0" prefWidth="163.0" text="tollplazaAdminastor" />
-      <Button layoutX="29.0" layoutY="61.0" mnemonicParsing="false" onAction="#handleSetTollFees" prefHeight="30.0" prefWidth="147.0" text="set and toll fees " />
-      <Button layoutX="45.0" layoutY="100.0" mnemonicParsing="false" onAction="#handleUpdateTollFees" prefHeight="26.0" prefWidth="107.0" text="updateTollfess" />
-      <Button layoutX="45.0" layoutY="134.0" mnemonicParsing="false" onAction="#handleLanePerformance" text="Lane Performance" />
-      <Button layoutX="45.0" layoutY="175.0" mnemonicParsing="false" onAction="#handleRevenueReport" text="Revenue Reports" />
-      <Button layoutX="45.0" layoutY="209.0" mnemonicParsing="false" onAction="#handleFlaggedVehicles" text="Flagged Vehicles" />
-      <Button layoutX="45.0" layoutY="242.0" mnemonicParsing="false" onAction="#handleTollTrafficReports" text="Toll Traffic Reports" />
-      <Button layoutX="45.0" layoutY="282.0" mnemonicParsing="false" onAction="#handleSystemHealth" text="System Health" />
-      <Button layoutX="45.0" layoutY="318.0" mnemonicParsing="false" onAction="#handleAnnouncements" text="Announcements" />
+      <Label fx:id="tollPlazaAdminstratorfxid" layoutX="45.0" layoutY="33.0" prefHeight="18.0" prefWidth="163.0" text="tollplazaAdminastor" />
+      <Button layoutX="29.0" layoutY="61.0" mnemonicParsing="false" onAction="#tollratemangamentOnaction" prefHeight="30.0" prefWidth="147.0" text="Toll Rate Management " />
+      <Button layoutX="45.0" layoutY="100.0" mnemonicParsing="false" onAction="#RevenueReportonaction" prefHeight="26.0" prefWidth="107.0" text=" Revenue Report " />
+      <Button layoutX="45.0" layoutY="134.0" mnemonicParsing="false" onAction="#managrtollCollectorsOnaction" text="Manage Toll Collectors " />
+      <Button layoutX="45.0" layoutY="175.0" mnemonicParsing="false" onAction="#LanePerformanceDashboardOnaction" text="Lane Performance Dashboard " />
+      <Button layoutX="45.0" layoutY="209.0" mnemonicParsing="false" onAction="#FlaggedVehiclesOnaction" text="Flagged Vehicles       " />
+      <Button layoutX="45.0" layoutY="242.0" mnemonicParsing="false" onDragDetected="#VehiclesStatisticsOnaction" text=" Vehicle Statistics  " />
+      <Button layoutX="45.0" layoutY="282.0" mnemonicParsing="false" onAction="#maintenanceSecheduleOnaction" text="Maintenance Schedule  " />
+      <Button layoutX="45.0" layoutY="318.0" mnemonicParsing="false" onAction="#ShiftScheduleManagementOnaction" text="Shift Schedule Management " />
+      <Button mnemonicParsing="false" text="Button" />
       <Button layoutX="73.0" layoutY="354.0" mnemonicParsing="false" onAction="#logoutonaction" text="logout" />
    </children>
 </AnchorPane>
